# proci

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  pkg.yml
src/: client.rs  main.rs  services.rs
templates/: tags.html
