[package]
name = "proci"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
either = "1.13.0"
oci-spec = "0.7.1"
reqwest = { version = "0.12.12", default-features = false, features = ["charset", "json", "rustls-tls", "macos-system-configuration"] }
rinja = "0.3.5"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
